	  uncutting text with the mark on. (DLR)
  main()
	- Exit if initscr() fails. (DLR)
- prompt.c:
  do_yesno_prompt()
	- Remove redundant check for NO_HELP's being FALSE. (DLR)
- search.c:
  do_replace_loop()
	- Fix problem where replacing e.g. single-byte characters with
	  multibyte ones could result in openfile->totsize's being
	  miscalculated. (DLR)
- utils.c:
  ngetline(), ngetdelim()
	- Update copyright notice to account for modifications. (DLR)
  ngetdelim()
	- Simplify. (DLR)
- winio.c:
  get_key_buffer()
	- Fix inaccurate comments. (DLR)
  do_mouseinput()
	- Add mouse wheel support.  Now, if mouse support is enabled,
	  and nano is using a version of ncurses compiled with the
	  --enable-ext-mouse option, rolling the mouse wheel up or down
	  will move the cursor three lines up or down.  Note that
	  ncurses built without --enable-ext-mouse needs to handle both
	  clicks and releases of the first mouse button, but ncurses
	  built with --enable-ext-mouse only needs to handle releases,
	  so keep dealing with both events. (DLR, suggested by Helmut
	  Jarausch)
	- Fix longstanding problem where mouse clicks on the statusbar
	  prompt text wouldn't be recognized unless the NO_HELP flag was
	  turned off. (DLR)
  edit_scroll()
	- Fix problem where the screen wouldn't be updated properly if
	  you paged up with the first line of the file onscreen and the
	  mark on. (DLR)
- configure.ac:
	- Update copyright notice to account for modifications. (DLR)
- COPYING:
	- Add a copy of the GNU GPL version 3. (DLR)
- COPYING.DOC:
	- Add a copy of the GNU FDL version 1.2. (DLR)
- Makefile.am:
	- Add COPYING.DOC to EXTRA_DIST. (DLR)
- doc/faq.html:
	- Update RPM links for nano 2.0.x. (DLR)
	- Update links to the Free Translation Project. (DLR)
	- Add minor punctuation and wording fixes, and update various
	  sections to account for Alpine. (DLR)
- doc/man/fr/nano.1, doc/man/fr/nanorc.5, doc/man/fr/rnano.1:
	- Make all copyright notices consistent. (DLR)